# BS_SM4

./: .gitignore  CMakeLists.txt
include/: Neon.h
src/: api.h  sm4_bs_neon.c
src/neon/: sm4_bs.c
test/: neon_test.c
